--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
-name = "pix-utils"
-version = "0.6.10"
-description = "Common utilities for all PIX projects."
-authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
+name = "pix-framework"
+version = "0.7.0"
+description = "Process Improvement Explorer Framework contains process discovery and improvement modules of the Process Improvement Explorer project."
+authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>", "Ihar Suvorau <ihar.suvorau@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "pix_framework", from = "src" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.9, <3.12"
