Add multitasking enhancement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,22 @@ packages = [
     { include = "pix_framework", from = "src" },
 ]
 
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry.dependencies]
 python = ">=3.9, <3.12"
 pandas = "^2.0.0"
 scipy = "^1.10.1"
 
-
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+markers = [
+    "unit",
+    "integration",
+    "smoke",
+]
