--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [tool.poetry]
 name = "pix-framework"
-version = "0.11.0"
+version = "0.11.1"
 description = "Process Improvement Explorer Framework contains process discovery and improvement modules of the Process Improvement Explorer project."
 authors = [
     "David Chapela de la Campa <david.chapela.delacampa@gmail.com>",
     "Ihar Suvorau <ihar.suvorau@gmail.com>",
 ]
 readme = "README.md"
-packages = [{ include = "pix_framework", from = "src" }]
+packages = [
+    { include = "pix_framework", from = "src" },
+    { include = "batch_processing_discovery", from = "src" },
+]
 
 [build-system]
 requires = ["poetry-core"]
@@ -19,6 +22,7 @@ pandas = "^2.0.1"
 scipy = "^1.10.1"
 pytz = "^2023.3"
 networkx = "^3.1"
+wittgenstein = "^0.3.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
