--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 packages = [
     { include = "pix_framework", from = "src" },
     { include = "batch_processing_discovery", from = "src" },
+    { include = "prioritization_discovery", from = "src" },
 ]
 
 [build-system]
@@ -23,6 +24,8 @@ scipy = "^1.10.1"
 pytz = "^2023.3"
 networkx = "^3.1"
 wittgenstein = "^0.3.4"
+pandasql = "^0.7.3"
+scikit-learn = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
