Internalize recently added packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,7 @@ authors = [
     "Ihar Suvorau <ihar.suvorau@gmail.com>",
 ]
 readme = "README.md"
-packages = [
-    { include = "pix_framework", from = "src" },
-    { include = "batch_processing_discovery", from = "src" },
-    { include = "prioritization_discovery", from = "src" },
-    { include = "case_attribute_discovery", from = "src" },
-    { include = "start_time_estimator", from = "src" },
-]
+packages = [{ include = "pix_framework", from = "src" }]
 
 [build-system]
 requires = ["poetry-core"]
