--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ networkx = "^3.1"
 wittgenstein = "^0.3.4"
 pandasql = "^0.7.3"
 scikit-learn = "^1.3.0"
+polars = "^0.18.15"
+pyarrow = "^12.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
