--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pandasql = "^0.7.3"
 scikit-learn = "^1.3.0"
 polars = "^0.18.15"
 pyarrow = "^12.0.1"
+lxml = "^4.9.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
